--- a/medals.html
+++ b/medals.html
@@ -3,7 +3,7 @@
   <body>
     <p>We have a fine selection of medals.</p>
     <div>
-      <a href="bronze.html">Bronze medals!</a>
+      <a href="bronze.html">Bronze medals!!</a>
     </div>
   </body>
 </html>
