--- a/medals.html
+++ b/medals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Welcome to our store!!!!</h1>
+    <h1>!Welcome to our store!!!!</h1>
     <p>We have a fine selection of medals.</p>
     <p>Please choose a section below.</p>
     <div>
