--- a/medals.html
+++ b/medals.html
@@ -7,6 +7,7 @@
     <p>Please choose a section below.</p>
     <div>
       <a href="bronze.html">Bronze medals!!</a>
+      <a href="gold.html">Gold medals</a>
     </div>
   </body>
   //i am adding this line - i am modifying this line
