edit from my clone 3

--- a/medals.html
+++ b/medals.html
@@ -10,5 +10,6 @@
       <a href="gold.html">Gold medals</a>
     </div>
   </body>
-  //i am adding this line - i am modifying this line
+  //i am adding this line - i am modifying this line //this is a change from my
+  clone 3
 </html>
