add thrid change from my clone 3

--- a/medals.html
+++ b/medals.html
@@ -11,5 +11,6 @@
     </div>
   </body>
   //i am adding this line - i am modifying this line //this is a change from my
+  clone 3 //and nother change from my clone 3 //and the third change from my
   clone 3
 </html>
